syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mibanco.archivofic.us";
option java_outer_classname = "ConsultarArchivoGrpc";

package consultararchivogrpc;

service ArchivoFicServiceGrpc {
  rpc consultarArchivo(Empty) returns (ArchivoConsultado);
}

message ArchivoConsultado {
  string archivo = 1;
}

message Empty {}