syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mibanco.historialconsultaclientecentralriesgo.es";

package HistorialConsultaClienteCentralRiesgo;

// messages Historial
message ConsultarUrlArchivoMasRecienteXmlInput {
  string tipoDocumento = 1;
  string numeroDocumento = 2;
  string digitoVerificacion = 3;
}

message  ResponseConsultaUrlArchivoMasRecienteXmlOutput{
  string url = 1;
}

service ConsultarUrlArchivoMasRecienteXmlGrpc{
  //rpc HistorialConsultaRiesgo
  rpc consultarUrlArchivoMasRecienteXml(ConsultarUrlArchivoMasRecienteXmlInput) returns (ResponseConsultaUrlArchivoMasRecienteXmlOutput);
}

